# dirty-batch-renderer

./: .gitmodules  CMakeLists.txt  build.bat  build.sh
src/: glad.c  main.c  vertex.shader
